force-app/zurich-base/main/default/objects/Product2/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Marca</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>