force-app/zurich-base/main/default/objects/Product2/fields/CommercialCode__c.field-meta.xml
<CustomField>
    <fullName>CommercialCode__c</fullName>
    <description>(OCS). Identificador del producto dentro del código técnico</description>
    <label>Commercial Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>