force-app/zurich-base/main/default/objects/Product2/fields/GroupCode__c.field-meta.xml
<CustomField>
    <fullName>GroupCode__c</fullName>
    <description>INFO Source: KTPA09T - CDAGRPCN</description>
    <label>Group Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>