force-app/zurich-base/main/default/objects/Product2/fields/GroupDescription__c.field-meta.xml
<CustomField>
    <fullName>GroupDescription__c</fullName>
    <description>INFO Source: KTPM08T - DSAGRPCN</description>
    <label>Group Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>