force-app/zurich-base/main/default/objects/Product2/fields/GroupName__c.field-meta.xml
<CustomField>
    <fullName>GroupName__c</fullName>
    <description>INFO Source: KTPM08T - NOAGRPCN</description>
    <label>Group Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>