force-app/zurich-base/main/default/objects/Product2/fields/HegeoGroupCode__c.field-meta.xml
<CustomField>
    <fullName>HegeoGroupCode__c</fullName>
    <formula>CASE(  GroupDescription__c ,
&apos;HOGAR&apos;,&apos;1&apos;, 
&apos;AUTOS&apos;,&apos;2&apos;, 
&apos;INMUEBLES&apos;,&apos;3&apos;, 
&apos;COMERCIOS&apos;,&apos;4&apos;, 
&apos;ACCIDENTES&apos;,&apos;5&apos;, 
&apos;EMBARCACIONES&apos;,&apos;6&apos;, 
&apos;FLOTAS&apos;,&apos;7&apos;, 
&apos;PATRIMONIALES&apos;,&apos;8&apos;, 
&apos;RESP. CIVIL&apos;,&apos;9&apos;, 
&apos;TECNICOS&apos;,&apos;10&apos;, 
&apos;TRANSPORTES&apos;,&apos;11&apos;, 
&apos;OTROS&apos;,&apos;12&apos;, 
&apos;ACCIDENTES-COLECTIVOS&apos;,&apos;14&apos;, 
&apos;RCDO&apos;,&apos;15&apos;, 
&apos;RCPRO&apos;,&apos;16&apos;, 
&apos;CIBER&apos;,&apos;17&apos;, 
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hegeo Group Code</label>
    <type>Text</type>
</CustomField>