force-app/zurich-base/main/default/objects/Product2/fields/INFO_Product_Number__c.field-meta.xml
<CustomField>
    <fullName>INFO_Product_Number__c</fullName>
    <description>(OCS). En Productos que provengan de INFO, el campo estará conformado por la concatenación del Commercial ID y el Technical ID</description>
    <externalId>true</externalId>
    <label>INFO Product Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>