force-app/zurich-base/main/default/objects/Product2/fields/InfoStatusDescription__c.field-meta.xml
<CustomField>
    <fullName>InfoStatusDescription__c</fullName>
    <label>INFO Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>