force-app/zurich-base/main/default/objects/Product2/fields/IsNewProduction__c.field-meta.xml
<CustomField>
    <fullName>IsNewProduction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsNewProduction</label>
    <type>Checkbox</type>
</CustomField>