force-app/zurich-base/main/default/objects/Product2/fields/IsUspProduct__c.field-meta.xml
<CustomField>
    <fullName>IsUspProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is USP Product?</label>
    <type>Checkbox</type>
</CustomField>