force-app/zurich-base/main/default/objects/Product2/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <description>Field to be used as external ID of the product</description>
    <externalId>true</externalId>
    <label>ProductID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>