force-app/zurich-base/main/default/objects/Product2/fields/TechnicalCode__c.field-meta.xml
<CustomField>
    <fullName>TechnicalCode__c</fullName>
    <description>(OCS). Identificador del tipo de producto</description>
    <label>Technical Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>